# pithos

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  README.md  tst.cmp
.github/workflows/: push.yaml  tag_publish.yaml
benches/: performance.rs
crates/pithos/: Cargo.toml  README.md
crates/pithos/src/: main.rs
crates/pithos/src/io/: utils.rs
crates/pithos/src/utils/: conversion.rs
crates/pithos_lib/: Cargo.toml  README.md
crates/pithos_lib/benches/: performance.rs
crates/pithos_lib/src/: lib.rs  notifications.rs  pithosreader.rs  pithoswriter.rs  readwrite.rs  streamreadwrite.rs  structs.rs  transformer.rs
crates/pithos_lib/src/crypt4gh/: error.rs  keys.rs  mod.rs  structs.rs
crates/pithos_lib/src/helpers/: crypt4gh.rs  flag_helpers.rs  footer_parser.rs  frames.rs  mod.rs  notifications.rs  structs.rs
crates/pithos_lib/src/pithos/: mod.rs  pithosreader.rs  pithoswriter.rs  structs.rs
crates/pithos_lib/src/transformers/: async_sender_sink.rs  decrypt.rs  decrypt_with_parts.rs  encrypt.rs  filter.rs  footer.rs  footer_extractor.rs  footer_updater.rs  gzip_comp.rs  hashing_transformer.rs  hyper_sink.rs  mod.rs  pithos_comp_enc.rs  size_probe.rs  tar.rs  writer_sink.rs  zip.rs  zstd_comp.rs  zstd_comp2.rs  zstd_decomp.rs
crates/pithos_pyo3/: Cargo.toml
spec/: SPECIFICATION.md
src/: compressor.rs  decompressor.rs  decrypt.rs  encrypt.rs  filter.rs  finalizer.rs  footer.rs  lib.rs  notifications.rs  readwrite.rs  streamreadwrite.rs  transformer.rs
src/helpers/: footer_parser.rs  mod.rs  notifications_helper.rs  write_adapter.rs
src/transformers/: async_sender_sink.rs  compressor.rs  decompressor.rs  decrypt.rs  encrypt.rs  filter.rs  footer.rs  gzip_comp.rs  hashing_transformer.rs  hyper_sink.rs  mod.rs  size_probe.rs  tar.rs  writer_sink.rs  zip.rs  zstd_comp.rs  zstd_decomp.rs
