[package]
authors = ["Sebastian <sb@pus.de>"]
name = "aruna-file"
version = "0.2.0-rc.2"
edition = "2021"
repository = "https://github.com/ArunaStorage/aruna-file"
license = "MIT OR Apache-2.0"
description = "Library and component for encrypting / compressing .aruna files, including specification"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-compression = {version = "0.4.0", features = ["tokio", "zstd"]}
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
byteorder = "1.4.3"
bytes = "1.4.0"
tokio = {version = "1.28.1", features = ["full"]}
async-trait = "0.1.68"
hyper = {version = "0.14.26", features = ["full"]}
futures = "0.3.28"
async-channel = "1.8.0"
async-stream = "0.3.5"
log = "0.4.19"
tar = "0.4.38"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
tokio-util = { version = "0.7.8", features = ["io"]}

[[bench]]
name = "performance"
harness = false