[package]
authors = ["Sebastian <sb@pus.de>"]
name = "aruna-file"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/ArunaStorage/aruna-file"
license = "MIT OR Apache-2.0"
description = "Library and component for encrypting / compressing .aruna files, including specification"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-compression = {version = "0.4.1", features = ["tokio", "zstd", "gzip"]}
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
byteorder = "1.4.3"
bytes = "1.4.0"
tokio = {version = "1.32.0", features = ["full"]}
async-trait = "0.1.73"
hyper = {version = "0.14.27", features = ["full"]}
futures = "0.3.28"
async-channel = "1.9.0"
async-stream = "0.3.5"
log = "0.4.20"
tar = "0.4.40"
digest = "0.10.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tokio-util = { version = "0.7.8", features = ["io"]}
md-5 = "0.10.5"

[[bench]]
name = "performance"
harness = false
