[package]
name = "pithos"
description = "Client for the Pithos object storage file format"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
pithos_lib = { path = "../pithos_lib" }