[package]
name = "pithos"
description = "Client for the Pithos object storage file format"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.79"
async-channel = "2.1.1"
async-trait = "0.1.77"
base64 = "0.21.7"
bytes = "1.5.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4.14", features = ["derive"] }
crypto_kx = { version = "0.2.1", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
openssl = "0.10.63"
pithos_lib = { path = "../pithos_lib" }
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "time"]}
x25519-dalek = "2.0.0"
