[package]
name = "pithos"
description = "Client for the Pithos object storage file format"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
async-trait = "0.1.81"
base64 = "0.22.1"
borsh = {version = "1.5.1", features = ["std", "derive"]}
bytes = "1.6.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.9", features = ["derive"] }
crypto_kx = { version = "0.2.1", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
openssl = "0.10.66"
pithos_lib = { path = "../pithos_lib", version="0.6.0"}
rand = "0.8.5"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "time"]}
x25519-dalek = "2.0.1"
indicatif = "0.17.8"