[package]
name = "pithos_lib"
description = "Library and components for encrypting / compressing pithos (.pto) files, including specification"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-compression = {version = "0.4.1", features = ["tokio", "zstd", "gzip"]}
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
byteorder = "1.4.3"
bytes = "1.4.0"
tokio = {version = "1.32.0", features = ["full"]}
async-trait = "0.1.73"
hyper = {version = "0.14.28", features = ["full"]}
futures = "0.3.28"
async-channel = "2.1.0"
async-stream = "0.3.5"
tar = "0.4.40"
digest = "0.10.7"
async_zip = { version = "0.0.16", features = ["chrono", "tokio", "deflate"] }
pin-project = "1"
tracing = "0.1.40"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
blake2 = "0.10.6"
rand_core = "0.6.4"
thiserror = "1.0.56"
crypto_kx = "0.2.1"
base64 = "0.21.7"
scrypt = { version = "0.11.0" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tokio-util = { version = "0.7.8", features = ["io"]}

[[bench]]
name = "performance"
harness = false
