[package]
name = "pithos_lib"
description = "Library and components for encrypting / compressing pithos (.pto) files, including specification"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-compression = {version = "0.4.11", features = ["tokio", "zstd", "gzip"]}
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
byteorder = "1.5.0"
bytes = "1.6.1"
tokio = {version = "1.38.1", features = ["full"]}
tokio-util = "0.7.11"
async-trait = "0.1.81"
hyper = {version = "1.4.1", features = ["full"]}
futures = "0.3.30"
async-channel = "2.3.1"
async-stream = "0.3.5"
tar = "0.4.41"
digest = "0.10.7"
async_zip = { version = "0.0.17", features = ["chrono", "tokio", "deflate"] }
pin-project = "1.1.4"
tracing = "0.1.40"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
blake2 = "0.10.6"
rand_core = "0.6.4"
thiserror = "1.0.62"
crypto_kx = "0.2.1"
base64 = "0.22.1"
scrypt = { version = "0.11.0" }
borsh = {version = "1.5.1", features = ["std", "derive"]}
itertools = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
pithos = { path = "../pithos" }

[[bench]]
name = "performance"
harness = false
